--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 scripts/weights
-
+scripts/__pycache__
+scripts/data/__pycache__
+scripts/layers/__pycache__
+scripts/layers/functions/__pycache__
+scripts/layers/modules/__pycache__
+scripts/utils/__pycache__
