--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ scripts/layers/__pycache__
 scripts/layers/functions/__pycache__
 scripts/layers/modules/__pycache__
 scripts/utils/__pycache__
+scripts/*.mp4
