--- a/scripts/param.yaml
+++ b/scripts/param.yaml
@@ -5,7 +5,7 @@ dt:
   display_top_view_window_mode: False
   record_top_view_window_mode: False
 
-  print_time_stamp_mode: False
+  print_time_stamp_mode: True
   print_xx_mode: False
 
   display_mask_mode: True
@@ -13,23 +13,23 @@ dt:
   display_result_mode: True
 
   image_topic: /usb_cam/image_rect_color
-  lidar_topic: /velodyne_points
+  lidar_topic: /pandar_points_processed
   pub_topic: /targets
-  calibration_file_path: /home/lishangjie/ros_workspace/detection_and_tracking_ws/src/detection_and_tracking/conf/head_camera.yaml
+  calibration_file_path: /home/lishangjie/ros_workspace/pcl_ws/src/detection_and_tracking/conf/head_camera.yaml
 
-  is_limit_mode: True
+  is_limit_mode: False
   the_view_number: 1
   the_field_of_view: 100
   
-  is_clip_mode: True
+  is_clip_mode: False
   the_sensor_height: 2.0
   the_view_higher_limit: 4.0
   the_view_lower_limit: -2.0
   the_min_distance: 0.5
   the_max_distance: 100
 
-  top_k_person: 6
-  top_k_vehicle: 8
+  top_k_person: 10
+  top_k_vehicle: 10
   score_threshold_person: 0.15
   score_threshold_vehicle: 0.65
 
