--- a/conf/param_seucat.yaml
+++ b/conf/param_seucat.yaml
@@ -16,7 +16,7 @@ dt:
   display_detection_result:           False
   display_segmentation_result:        False
   display_calibration_result:         False
-  display_2d_modeling_result:         False
+  display_2d_modeling_result:         True
   display_3d_modeling_result:         True
   
   processing_mode: 'DT' # D - detection, DT - detection and tracking
