--- a/conf/param.yaml
+++ b/conf/param.yaml
@@ -3,10 +3,10 @@ dt:
   print_objects_info:                 False
   record_objects_info:                True
   
-  sub_image_topic:                    /usb_cam/image_rect_color
+  sub_image_topic:                    /usb_cam/image_raw
   sub_point_clouds_topic:             /pandar_points_processed
   pub_marker_topic:                   /objects
-  calibration_file:                   head_camera.yaml
+  calibration_file:                   head_camera_20210323.yaml
   
   display_image_raw:                  False
   display_image_masked:               False
@@ -15,23 +15,24 @@ dt:
   
   display_detection_result:           False
   display_segmentation_result:        False
-  display_2d_modeling_result:         True
+  display_calibration_result:         False
+  display_2d_modeling_result:         False
   display_3d_modeling_result:         True
   
   processing_mode: 'DT' # D - detection, DT - detection and tracking
   processing_object: 'both' # car, person, both
   
-  pc_view_crop:                       True
+  pc_view_crop:                       False
   area_number:                        1
   fov_angle:                          100
   
-  pc_range_crop:                      True
+  pc_range_crop:                      False
   sensor_height:                      2.0
   higher_limit:                       4.0
   lower_limit:                        -4.0
   min_distance:                       1.5
   max_distance:                       50.0
   
-  blind_update_limit:                 5
+  blind_update_limit:                 1
   frame_rate:                         10
   max_id:                             10000
