Implement recording of time

--- a/conf/param.yaml
+++ b/conf/param.yaml
@@ -2,9 +2,10 @@ dt:
   print_time:                         True
   print_objects_info:                 False
   record_objects_info:                True
+  record_time:                        True
   
   sub_image_topic:                    /usb_cam/image_raw
-  sub_point_clouds_topic:             /pandar_points_processed
+  sub_point_clouds_topic:             /pandar_points_no_ground
   pub_marker_topic:                   /objects
   calibration_file:                   head_camera_20210323.yaml
   
@@ -14,10 +15,17 @@ dt:
   display_point_clouds_projected:     False
   
   display_detection_result:           False
-  display_segmentation_result:        True
+  display_segmentation_result:        False
   display_calibration_result:         True
-  display_2d_modeling_result:         True
+  
+  display_2d_modeling_result:         False
+  display_obj_pc:                     False
+  display_gate:                       False
+  
   display_3d_modeling_result:         True
+  display_class:                      True
+  display_id:                         True
+  display_state:                      False
   
   processing_mode: 'DT' # D - detection, DT - detection and tracking
   processing_object: 'car' # car, person, both
