--- a/conf/param.yaml
+++ b/conf/param.yaml
@@ -5,24 +5,25 @@ dt:
   record_time:                        True
   
   sub_image_topic:                    /usb_cam/image_raw
-  sub_point_clouds_topic:             /pandar_points_no_ground
+  sub_point_clouds_topic:             /pandar_points_processed
   pub_marker_topic:                   /objects
   calibration_file:                   head_camera_20210323.yaml
   
   display_image_raw:                  False
-  display_image_masked:               False
+  display_image_masked:               True
   display_point_clouds_raw:           False
-  display_point_clouds_projected:     False
+  display_point_clouds_projected:     True
   
   display_detection_result:           False
-  display_segmentation_result:        False
-  display_calibration_result:         True
+  display_segmentation_result:        True
+  display_calibration_result:         False
   
   display_2d_modeling_result:         False
   display_obj_pc:                     False
   display_gate:                       False
   
   display_3d_modeling_result:         True
+  display_frame:                      True
   display_class:                      True
   display_id:                         True
   display_state:                      False
