--- a/conf/param.yaml
+++ b/conf/param.yaml
@@ -10,12 +10,12 @@ dt:
   calibration_file:                   head_camera_20210323.yaml
   
   display_image_raw:                  False
-  display_image_masked:               True
+  display_image_segmented:            True
   display_point_clouds_raw:           False
   display_point_clouds_projected:     True
   
-  display_detection_result:           False
-  display_segmentation_result:        True
+  display_segmentation_result:        False
+  display_fusion_result:              True
   display_calibration_result:         False
   
   display_2d_modeling_result:         False
