--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modules/yolact"]
-	path = modules/yolact
-	url = https://github.com/shangjie-li/yolact.git
+[submodule "modules/yolov5"]
+	path = modules/yolov5
+	url = https://github.com/shangjie-li/yolov5.git
